name:                nacionlumpen-chat
version:             0.1.0.0
-- synopsis:            
-- description:         
-- license:             
author:              Alejandro Serrano
maintainer:          trupill@gmail.com
-- copyright:           
category:            Network
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable nacionlumpen-chat
  main-is:             Main.hs
  other-modules:       Types,
                       ServerLoop,
                       ResponsePrinter,
                       RequestParser
  -- other-extensions:    
  build-depends:       base >= 4.9 && < 5,
                       random,
                       bytestring,
                       containers,
                       attoparsec,
                       conduit-extra,
                       conduit-combinators,
                       async,
                       stm,
                       stm-conduit
  hs-source-dirs:      src
  default-language:    Haskell2010